# finIndustry

./: .env.example  .gitignore  README.md  SKILL.md  input_contract.md  module_manifest.yaml  output_contract.md  pyproject.toml
docs/: industry-analysis-design-v1.md  integration.md  sub-skill-spec-v1.md
docs/plans/: 2026-05-01-plan-1-foundation-and-trend-mvp.md
outputs/: 002261_2026-04-30.json  002897_2026-04-30.json  600089_2026-04-30.json  600519_2026-04-30_smoke.json  600519_2026-04-30_smoke_v2.json  600519_2026-04-30_smoke_v3.json  600519_2026-04-30_smoke_v4.json  run_live.json
scripts/: output_validator.py
scripts/capital/: fetch_main_flow.py  fetch_margin.py  fetch_northbound.py
scripts/classification/: fetch_concept_mapping.py  fetch_industry_classification.py  industry_etf_mapping.yaml
scripts/common/: akshare_client.py  cache.py  derive_signal.py  tushare_client.py
scripts/fundamentals/: fetch_industry_financials.py  fetch_industry_valuation.py
scripts/leaders/: compute_target_position.py  fetch_industry_leaders.py
scripts/macro_policy/: fetch_macro_indicators.py
scripts/report/: build_pdf_report.py
scripts/trend/: compute_breadth.py  fetch_industry_index.py  fetch_market_index.py
shared_schemas/: module_output_v1.schema.json
tests/: conftest.py
tests/fixtures/: 600519_classification.json  801123_index.json  801125_index.json  csi300_index.json
tests/integration/: test_600519_trend_mvp.py
tests/unit/: test_akshare_client.py  test_breadth.py  test_build_pdf_report.py  test_cache.py  test_concept_mapping.py  test_derive_signal.py  (+13 more)
