[project]
name = "industry-analysis"
version = "1.0.0"
description = "stock-forecast-system 的行业分析子 skill"
requires-python = ">=3.10"
dependencies = [
    "tushare>=1.4.0",
    "akshare>=1.16.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: 集成测试,可能调用外部服务(默认跳过)",
]
addopts = "-ra -q --strict-markers"

[tool.coverage.run]
source = ["scripts"]
omit = ["scripts/*/tests/*"]
